<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD"
    tools:context="com.example.android.jogging.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="14dp"
                android:fontFamily="cursive"
                android:text="@string/Pooh"
                android:textAllCaps="true"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="0"
                android:textAllCaps="true"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:id="@+id/winner1"/>


            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:onClick="fourmiles"
                android:paddingBottom="10dp"
                android:paddingRight="30dp"
                android:text="@string/Four_Miles"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:background="#F8BBD0"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:onClick="threemiles"
                android:paddingBottom="10dp"
                android:paddingRight="30dp"
                android:text="@string/Three_Miles"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:background="#F8BBD0"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:onClick="twomiles"
                android:paddingBottom="10dp"
                android:paddingRight="30dp"
                android:text="@string/Two_Miles"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:background="#F8BBD0"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:onClick="onemile"
                android:paddingBottom="10dp"
                android:paddingRight="30dp"
                android:text="@string/One_Mile"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:background="#F8BBD0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="14dp"
                android:fontFamily="cursive"
                android:text="@string/Piglet"
                android:textAllCaps="true"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/point2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="0"
                android:textAllCaps="true"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:id="@+id/winner2"/>


            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:onClick="fourmiles1"
                android:paddingBottom="10dp"
                android:paddingRight="30dp"
                android:text="@string/Four_Miles"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:background="#F8BBD0"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:onClick="threemiles1"
                android:paddingBottom="10dp"
                android:paddingRight="30dp"
                android:text="@string/Three_Miles"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:background="#F8BBD0"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:onClick="twomiles1"
                android:paddingBottom="10dp"
                android:paddingRight="30dp"
                android:text="@string/Two_Miles"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:background="#F8BBD0"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:onClick="onemile1"
                android:paddingBottom="10dp"
                android:paddingRight="30dp"
                android:text="@string/One_Mile"
                android:textAllCaps="true"
                android:textSize="10sp"
                android:background="#F8BBD0"/>
        </LinearLayout>


    </LinearLayout>

    <ImageButton
        android:layout_width="850dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitEnd"
        android:src="@drawable/poohrunning" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="100dp"
        android:onClick="restart"
        android:paddingBottom="20dp"
        android:text="@string/Restart"
        android:background="#F8BBD0"/>

    <ImageView
        android:layout_width="850dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitStart"
        android:src="@drawable/tigerunning" />

</RelativeLayout>






